# QuantitativeMethodsInFinance

./: .gitignore  README.md  create_conda_env  pyproject.toml
src/: derivatives.py  hessian_matrix.py
src/quantitative_methods_in_finance.egg-info/: PKG-INFO  SOURCES.txt
