[build-system]
requires = ["setuptools >= 69"]
build-backend = "setuptools.build_meta"
[project]
name="quantitative-methods-in-finance"
version="0.0.1"
dependencies = [
    "pandas"
]
requires-python = ">= 3.11"
authors = [
    {name="Matthew Markham", email="notme@example.com"}
]
description = "A workbook of the book 'Quantitative Methods in Finance' by Carol Alexander"